--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ before_install:
     - go get golang.org/x/tools/cmd/goimports
     - go get github.com/mattn/goveralls
 
+install:
+    - go get github.com/yannisl/gotex/tabular
+    - go get github.com/yannisl/gotex/enviro
+    - go get github.com/yannisl/gotex/MWE
 script:
 #    - $HOME/gopath/bin/goveralls -coverprofile=coverage.cov -service=travis-ci
 #    - bash <(curl -s https://codecov.io/bash)
